# planogram

./: .env.example  .gitconfig  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  VERSIONKIT.md  alembic.ini  main.py  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: cut_release.py  update_changelog.py
.github/workflows/: auto-merge-dependabot.yml  code-quality.yml  dependabot-auto-merge.yml  release.yml  update-changelog.yml
.instructions/: project.md
docs/: PULL_REQUEST_TEMPLATE.md  git_commit_template.txt
migrations/: env.py
migrations/versions/: 64cc35edd54b_create_google_tokens_table.py
planogram/: __init__.py  config.py  database.py  main.py  models.py
planogram/google_oauth/: client.py  client_helpers.py  token_repo.py  token_store.py
planogram/models/: __init__.py  google_token.py
planogram/routes/: __init__.py  asset_registry.py  auth.py  calendar.py  home.py  review.py  upload.py
planogram/routes/static/css/: styles.css  styles.min.css  styles.scss
planogram/routes/static/css/base/: _reset.scss
planogram/routes/static/css/components/: _container.scss
planogram/routes/templates/: base.html  calendars.html  events.html  index.html
planogram/services/: __init__.py  calendar.py  parser.py
planogram/templates/: base.html  index.html  review.html  success.html
scripts/: check_branch_name.py  validate_commit_msg.py
static/css/: style.css  style.min.css  style.scss
static/css/abstracts/: _variables.scss
static/css/base/: _base.scss  _dark.scss  _reset.scss
static/css/components/: _alerts.scss  _buttons.scss  _forms.scss  _table.scss
static/css/layout/: _footer.scss  _header.scss
static/css/pages/: _review.scss  _success.scss  _upload.scss
static/js/: review.js  review.min.js  theme.js  theme.min.js  upload.js  upload.min.js
tests/: __init__.py  conftest.py  test_calendar.py  test_config.py  test_models.py  test_parser.py  test_routes.py
versionkit/: bump_version.py  changelog.py  cli.py  io.py  spec.py
