[project]
name = "planogram"
version = "0.1.0"
description = "Scan schedule images and push events to Google Calendar"
authors = [
    {name = "Kyle Schoenhardt",email = "kschoenhardt@nuarch.com"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.47.0,<0.48.0)",
    "anthropic (>=0.102.0,<0.103.0)",
    "google-api-python-client (>=2.196.0,<3.0.0)",
    "google-auth-oauthlib (>=1.4.0,<2.0.0)",
    "google-auth-httplib2 (>=0.4.0,<0.5.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "pillow (>=12.2.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

