[project]
name = "planogram"
version = "0.1.0"
description = "Scan schedule images and push events to Google Calendar"
authors = [
    {name = "Kyle Schoenhardt",email = "kyle.schoenhardt@yahoo.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.14"
dependencies = [
    "fastapi >= 0.136.1",
    "uvicorn[standard] >= 0.47.0",
    "anthropic >= 0.102.0",
    "google-api-python-client >= 2.196.0",
    "google-auth-oauthlib >= 1.4.0",
    "google-auth-httplib2 >= 0.4.0",
    "jinja2 >= 3.1.6",
    "python-multipart >= 0.0.29",
    "aiofiles >= 25.1.0",
    "pydantic >= 2.13.4",
    "pydantic-settings >= 2.14.1",
    "pillow >= 12.2.0",
]


[dependency-groups]
dev = [
    "ruff >= 0.5.0",
    "mypy >= 1.10.0",
    "pytest >= 8.0.0",
    "httpx >= 0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
ignore_missing_imports = true
strict = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

